# KDE-AppImage-Thumbnailer

./: .gitignore  CMakeLists.txt  README.md
pack/: cpack_deb.cmake
src/: AppImageThumbnailCreator.cpp  AppImageThumbnailCreator.h  AppImageThumbs.desktop  CMakeLists.txt  TestAppImageThumbnailCreator.cpp  TestAppImageThumbnailCreator.h  appimagethumbnail.desktop
tests/: CMakeLists.txt  TestAppImageThumbnailCreator.cpp  TestAppImageThumbnailCreator.h
tests/data/: Echo-x86_64.AppImage
